<?xml version="1.0"?>
<package format="2">
  <name>hrwros_week4</name>
  <version>0.0.0</version>
  <description>The hrwros_week4 package</description>
  <maintainer email="donnie@todo.todo">donnie</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
</package>
